[metadata]
name = ringsdb_to_print
version = attr: ringsdb_to_print.__version__
description = 
long_description = file: README.md
long_description_content_type = text/markdown
author = SamuelNicaise
url = https://github.com/SamuelNicaise/ringsdb_to_print.git

license_files = LICENSE
keywords = bioinformatics, genetics
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU Affero General Public License v3

[options.package_data]
* = *.yaml, *.json


[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.10
install_requires =

[options.packages.find]
where=src

[options.extras_require]
dev =
    black
    pytest

[options.entry_points]
console_scripts =
    ringsdb_to_print = ringsdb_to_print.__main__:main
